<resources>
    <string name="app_name">Magma</string>
    <string name="remaining">Remaining</string>
    <string name="done">Done</string>
    <string name="images">Images</string>
    <string name="record">Records</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
</resources>