<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtv_remaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remaining"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/txtv_title"
        app:layout_constraintBottom_toTopOf="@+id/images"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/done"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/txtv_title"
        app:layout_constraintBottom_toTopOf="@+id/images"
        app:layout_constraintStart_toEndOf="@+id/txtv_remaining"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/images"
        android:gravity="center"
        android:minLines="2"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintBottom_toTopOf="@+id/recycler"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/record"
        app:layout_constraintTop_toBottomOf="@+id/txtv_remaining" />

    <TextView
        android:id="@+id/record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record"
        android:minLines="2"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/images"
        app:layout_constraintStart_toEndOf="@+id/images"
        app:layout_constraintEnd_toStartOf="@+id/accepted"
        app:layout_constraintTop_toTopOf="@+id/images" />

    <TextView
        android:id="@+id/accepted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accepted"
        android:gravity="center"
        android:minLines="2"
        app:layout_constraintBottom_toBottomOf="@+id/images"
        app:layout_constraintStart_toEndOf="@+id/record"
        app:layout_constraintEnd_toStartOf="@+id/rejected"
        app:layout_constraintTop_toTopOf="@+id/images" />

    <TextView
        android:id="@+id/rejected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minLines="2"
        android:text="@string/rejected"
        app:layout_constraintBottom_toBottomOf="@+id/images"
        app:layout_constraintStart_toEndOf="@+id/accepted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/images" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/item_images"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/images"
        app:layout_constraintBottom_toTopOf="@+id/btn_accepted"
        />

    <Button
        android:id="@+id/btn_accepted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        app:layout_constraintTop_toBottomOf="@+id/recycler"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_rejected"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_rejected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reject"
        app:layout_constraintTop_toBottomOf="@+id/recycler"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_accepted"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>